--- a/environment.yml
+++ b/environment.yml
@@ -270,7 +270,10 @@ dependencies:
   - zstd=1.5.5
   - pip:
       - absl-py==2.1.0
+      - exifread==3.0.0
       - gdal==3.0.2
+      - geographiclib==2.0
+      - geopy==2.4.1
       - grpcio==1.62.1
       - huggingface-hub==0.22.2
       - markdown==3.6
